# OpenANN

./: .astylerc  .gitignore  .mailmap  .travis.yml  CMakeLists.txt  OpenANN.kdev4  README  README.md  doxygen.cfg.in  manifest.xml  openann.pc.in
OpenANN/: ActivationFunctions.h  AdaBoost.h  AssertionMacros.h  Bagging.h  CompressionMatrixFactory.h  Compressor.h  Convenience.h  DeepNetwork.h  EigenWrapper.h  EnsembleLearner.h  ErrorFunctions.h  Evaluation.h  Evaluator.h  GP.h  IntrinsicPlasticity.h  KMeans.h  Learner.h  MLP.h  MLPImplementation.h  Net.h  Normalization.h  OpenANN  OpenANNException.h  Optimizable.h  Optimizer.h  PCA.h  Preprocessing.h  RBM.h  Random.h  Regularization.h  SparseAutoEncoder.h  StopCriteria.h  Transformer.h  ZCAWhitening.h
OpenANN/io/: DataSet.h  DataSetView.h  DataStream.h  DirectStorageDataSet.h  FANN.h  FANNFormatLoader.h  LibSVM.h  Logger.h  SplitableDataSet.h  WeightedDataSet.h
OpenANN/layers/: AlphaBetaFilter.h  Compressed.h  Convolutional.h  Dropout.h  Extreme.h  FullyConnected.h  Input.h  Layer.h  LocalResponseNormalization.h  MaxPooling.h  SigmaPi.h  SigmaPiConstraints.h  Subsampling.h
OpenANN/optimization/: CG.h  IPOPCMAES.h  LBFGS.h  LMA.h  MBSGD.h  Optimizable.h  Optimizer.h  SGD.h  StoppingCriteria.h  StoppingInterrupt.h
OpenANN/rl/: ActionSpace.h  Agent.h  Environment.h  RandomAgent.h  StateSpace.h
OpenANN/util/: AssertionMacros.h  EigenWrapper.h  OpenANNException.h  Random.h  Stopwatch.h
benchmarks/: CMakeLists.txt
benchmarks/cifar10/: CIFARLoader.h  CMakeLists.txt  benchmark.py  cifar10.cpp
benchmarks/convolution/: CMakeLists.txt  convolution.cpp
benchmarks/iris/: CMakeLists.txt  benchmark.py
benchmarks/mnist/: CMakeLists.txt  Distorter.h  EnhancedDataSet.h  IDXLoader.h  autoencoder.cpp  benchmark.py  mnist.cpp  rbm.cpp  viewdata.cpp  visualize.cpp
benchmarks/octopusarm/: CMakeLists.txt  agent.cpp  agent.h  benchmark.py  evaluate  protocol.cpp  protocol.h  run  settings.xml  tcpClient.cpp
benchmarks/p300speller/: BCIDataSet.cpp  BCIDataSet.h  CMakeLists.txt  Decimator.h  benchmark.py  p300.cpp  targets
benchmarks/polebalancing/: CMakeLists.txt  benchmark.py  polebalancing.cpp
benchmarks/regularization/: CMakeLists.txt  benchmark.py
benchmarks/sarcos/: CMakeLists.txt  benchmark.py
benchmarks/speedtest/: CMakeLists.txt  speedtest.cpp
benchmarks/twospirals/: CMakeLists.txt  benchmark.py  twospirals.cpp
cmake/: .astylerc  FindEigen3.cmake  UseDoxygen.cmake  Utilities.cmake
doc/: DoxygenLayout.xml  architecture.dox  benchmarks.dox  convenience.dox  developers.dox  getting-started.dox  howto-createdataset.dox  howto-getting-started.dox  howto-learn.dox  install.dox  learn.dox  logging.dox  mainpage.dox  other-libs.dox
examples/: CMakeLists.txt
examples/gaussianprocesses/: CMakeLists.txt  Plot.cpp  Plot.h  gp.cpp
examples/polebalancing/: AlphaBetaFilter.cpp  AlphaBetaFilter.h  CMakeLists.txt  DoubleExponentialSmoothing.h  DoublePoleBalancing.cpp  DoublePoleBalancing.h  DoublePoleBalancingVisualization.cpp  DoublePoleBalancingVisualization.h  NeuroEvolutionAgent.cpp  NeuroEvolutionAgent.h  SinglePoleBalancing.cpp  SinglePoleBalancing.h  dpb.cpp
examples/sine/: CMakeLists.txt  sine.py
examples/twospirals/: CMakeLists.txt  CreateTwoSpiralsDataSet.h  TwoSpiralsVisualization.cpp  TwoSpiralsVisualization.h  twospirals.cpp
examples/xor/: CMakeLists.txt  xor.cpp  xor.py
lib/: CMakeLists.txt  setup.sh
python/: CMakeLists.txt  build_info.py.in  cbindings.pxd  dataset.pxi  evaluation.pxi  iris.py  metalearning.pxi  net.pxi  openann.pyx  openann.pyx.in  optimization.pxi  preprocessing.pxi  sarcos.py  setup.py  setup.py.in  test.py  util.pxi
python/lib/: cbindings.pxd  dataset.pyx  evaluation.pyx  layer.pyx  log.pyx  net.pyx  openann.pyx  optimization.pyx  util.pyx
python/openann/: cbindings.pxd  dataset.pyx  evaluation.pyx  layer.pyx  net.pyx  openann.pyx  optimization.pyx  preprocessing.pyx  util.pyx
ruby/: CMakeLists.txt  MLPWrapper.h  example.rb  extconf.rb.in  openann.cpp
src/: ActivationFunctions.cpp  AdaBoost.cpp  AlphaBetaFilter.cpp  Bagging.cpp  CG.cpp  CMakeLists.txt  Compressed.cpp  CompressionMatrixFactory.cpp  Compressor.cpp  Convenience.cpp  Convolutional.cpp  DataSetView.cpp  DataStream.cpp  DeepNetwork.cpp  DirectStorageDataSet.cpp  Dropout.cpp  EigenWrapper.cpp  Evaluation.cpp  Evaluator.cpp  Extreme.cpp  FANN.cpp  FANNFormatLoader.cpp  FullyConnected.cpp  GP.cpp  IPOPCMAES.cpp  Input.cpp  IntrinsicPlasticity.cpp  KMeans.cpp  LBFGS.cpp  LMA.cpp  Layer.cpp  Learner.cpp  LibSVM.cpp  LibSvm.cpp  LocalResponseNormalization.cpp  Logger.cpp  MBSGD.cpp  MLP.cpp  MLPImplementation.cpp  MaxPooling.cpp  (+19 more)
src/cuda/: CUDAcommonUtils.cu  CUDAcommonUtils.cuh  cuBLASInterface.cu  cuBLASInterface.cuh
test/: ActivationFunctionsTestCase.cpp  ActivationFunctionsTestCase.h  AdaBoostTestCase.cpp  AdaBoostTestCase.h  BaggingTestCase.cpp  BaggingTestCase.h  CGTestCase.cpp  CGTestCase.h  CMAESTestCase.cpp  CMAESTestCase.h  CMakeLists.txt  CompressedTestCase.cpp  CompressedTestCase.h  CompressionMatrixFactoryTestCase.cpp  CompressionMatrixFactoryTestCase.h  ConvolutionalTestCase.cpp  ConvolutionalTestCase.h  DataSetTestCase.cpp  DataSetTestCase.h  DropoutTestCase.cpp  DropoutTestCase.h  EvaluationTestCase.cpp  EvaluationTestCase.h  FiniteDifferences.cpp  FiniteDifferences.h  FullyConnectedTestCase.cpp  FullyConnectedTestCase.h  IODataSetTestCase.cpp  IODataSetTestCase.h  IntrinsicPlasticityTestCase.cpp  IntrinsicPlasticityTestCase.h  KMeansTestCase.cpp  KMeansTestCase.h  LBFGSTestCase.cpp  LBFGSTestCase.h  LMATestCase.cpp  LMATestCase.h  LayerAdapter.cpp  LayerAdapter.h  LayerTestCase.cpp  (+34 more)
test/lib/: CMakeLists.txt  setup.sh
test/optimization/: Ellinum.h  Himmelblau.h  Quadratic.h  Rosenbrock.h
