project(OpenANNLibrary)

configure_file(OpenANN.cpp.in ${PROJECT_SOURCE_DIR}/OpenANN.cpp)
add_definitions(${OPENANN_COMPILER_FLAGS})
file(GLOB_RECURSE openann_src "*.cpp")
add_library(openann SHARED ${openann_src})
if(OPENMP_FOUND)
  target_link_libraries(openann gomp)
endif()
if(CUDA_FOUND)
  include_directories(cuda)
  file(GLOB openann_cuda_src "cuda/*.cu")
  cuda_add_library(openann_cuda SHARED ${openann_cuda_src})
  cuda_add_cublas_to_target(openann_cuda)
  target_link_libraries(openann openann_cuda)
  install(TARGETS openann_cuda DESTINATION lib)
endif()
if(USE_GPL_LICENSE)
  target_link_libraries(openann alglib)
endif()
install(TARGETS openann DESTINATION lib)
